Keep in the tree what the parse read a contextual word as
The parser already decided where `example`, `examples for`, `fake`,
`private`/`partial`, `depends on` and `intrinsic` are keywords, then
wrote each of them into the tree as the IDENT the lexer handed over.
Every reader downstream worked the decision out again from position:
the language server special-cased the `on` of `depends on` and never
reached the others, the AST builder skipped "one ident past the
keyword", and the formatter did the same with `nameList(c, 1, ...)`
and `idents(n) // ["example", target]`.

ContextualWord is now the vocabulary of these words, and TopLevelForm
builds its contextual starters from it. The parser reads one through
eat/expect(ContextualWord), which consume the word and write it into
the tree as CONTEXTUAL_KW in the same step; the lexer is unchanged, so
each word is still an ordinary name everywhere else.

The readers then ask the tree:
- Analyzer sends CONTEXTUAL_KW as a keyword and derives the reserved
  kinds from CstLexer instead of a second list; the `depends on`
  special case is gone.
- AstBuilder reads a clause's or a definition's name from the first
  token that stands where a name stands, so no offset says how many
  keywords come before it.
- Formatter writes these words as CONTEXTUAL_KW and drops its skips;
  Spacing reads them under IDENT, as it reads `_`.

What a dependency name in `depends on` is classified as is left as it
was; this change is about the keyword, not about the names after it.

Part of #1888.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>